@@ -2,7 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*zsh-completion-20130808.ebuild (09 Aug 2013)
+*zsh-completion-20140716 (06 Aug 2014)
+
+  06 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
+*zsh-completion-20130808 (09 Aug 2013)
 
   06 Jul 2014; Martin Väth <martin@mvath.de>:
   New style github tarball. Fix IUSE
